# capstone_robotics2026

./: .gitignore
barcode_test/: CMakeLists.txt
barcode_test/include/zebra-scanner/: CsBarcodeTypes.h  CsIEventListenerXml.h  CsUserDefs.h
barcode_test/src/: main_barcode.cpp
fwis_cartographer/: CMakeLists.txt  package.xml
fwis_cartographer/launch/: cartographer.launch.py  occupancy_grid.launch.py
fwis_cartographer/rviz/: cartographer_rviz.rviz
fwis_navigation/: CMakeLists.txt  mpc_ufrws_controller.xml  package.xml
fwis_navigation/config/: my_nav2_replanning_and_recovery.xml  my_nav2_through_poses.xml
fwis_navigation/launch/: navigation2.launch.py
fwis_navigation/map/: demo_room.pgm  demo_room.yaml  test_room.pgm  test_room.yaml
fwis_navigation/param/: params_nav2.yaml
fwis_navigation/rviz/: rviz_nav2.rviz
fwis_navigation/scripts/: waypoint_manager.py  waypoints_creator.py
fwis_navigation/src/: mpc_ufrws_controller.cpp
fwis_robot/: CMakeLists.txt  package.xml  test.pgm  test.yaml
fwis_robot/config/: ekf.yaml  joystick.yaml  robot_params.yaml  robot_rviz.rviz
fwis_robot/include/fwis_robot/: camera.hpp  controller.hpp  imu_driver.hpp  kinematics.hpp
fwis_robot/launch/: robot_bringup.launch.py
fwis_robot/models/mobile_assembly/meshes/: dir1_link.STL  dir3_link.STL  dir4_link.STL  lidar_link.STL  motor1_link.STL  motor2_link.STL  motor4_link.STL
fwis_robot/scripts/: asset_reporter.py  pid_csv.py  stm32_bridge.py  wheel_vel_log_20260415_220639.csv
fwis_robot/src/: aruco_aligner_node.cpp  camera.cpp  camera_node.cpp  controller.cpp  dynamixel_scan_node.cpp  imu_driver.cpp  imu_node.cpp  kinematics.cpp  mobile_robot_node.cpp  zebra_scanner_node.cpp
fwis_robot/urdf/: fwis_position_velocity.xacro.urdf
fwis_simulation/: CMakeLists.txt  package.xml
fwis_simulation/config/: fwis_controller_effort.yaml  fwis_controller_position_velocity.yaml
fwis_simulation/data/: world_includes.txt
fwis_simulation/launch/: fwis_effort.launch.py  fwis_position_velocity.launch.py
fwis_simulation/models/aruco_marker_0/: model.config  model.sdf
fwis_simulation/models/aruco_marker_0/materials/textures/: aruco_maker.py
fwis_simulation/models/demo_room/: model.config  model.sdf
fwis_simulation/models/demo_room/meshes/: base_link.STL
fwis_simulation/models/generated_markers/aruco_marker_0/: model.config  model.sdf
fwis_simulation/models/generated_markers/aruco_marker_1/: model.config  model.sdf
fwis_simulation/models/generated_markers/aruco_marker_10/: model.config  model.sdf
fwis_simulation/models/generated_markers/aruco_marker_11/: model.config  model.sdf
fwis_simulation/models/generated_markers/aruco_marker_12/: model.config  model.sdf
fwis_simulation/models/generated_markers/aruco_marker_13/: model.config  model.sdf
fwis_simulation/models/generated_markers/aruco_marker_14/: model.config  model.sdf
fwis_simulation/models/generated_markers/aruco_marker_15/: model.config  model.sdf
fwis_simulation/models/generated_markers/aruco_marker_16/: model.config  model.sdf
fwis_simulation/models/generated_markers/aruco_marker_17/: model.config  model.sdf
fwis_simulation/models/generated_markers/aruco_marker_18/: model.config  model.sdf
fwis_simulation/models/generated_markers/aruco_marker_19/: model.config  model.sdf
fwis_simulation/models/generated_markers/aruco_marker_2/: model.config  model.sdf
fwis_simulation/models/generated_markers/aruco_marker_3/: model.config  model.sdf
fwis_simulation/models/generated_markers/aruco_marker_4/: model.config  model.sdf
fwis_simulation/models/generated_markers/aruco_marker_5/: model.config  model.sdf
fwis_simulation/models/generated_markers/aruco_marker_6/: model.config  model.sdf
fwis_simulation/models/generated_markers/aruco_marker_7/: model.config  model.sdf
fwis_simulation/models/generated_markers/aruco_marker_8/: model.config  model.sdf
fwis_simulation/models/generated_markers/aruco_marker_9/: model.config  model.sdf
fwis_simulation/models/mobile_assembly/meshes/: camera_link.STL  dir1_link.STL  dir2_link.STL  dir3_link.STL  dir4_link.STL  imu_link.STL  lidar_link.STL  motor1_direction_link.STL  motor1_move_link.STL  motor2_direction_link.STL  motor2_move_link.STL  motor3_direction_link.STL  motor3_link.STL  motor3_move_link.STL  motor4_direction_link.STL  scaner2_link.STL  scanner1_link.STL  scanner2_link.STL
fwis_simulation/models/sim_room/: model.config  model.sdf
fwis_simulation/models/sim_room/meshes/: base_link.STL
fwis_simulation/models/templates/aruco_marker_template/: model.config  model.sdf
fwis_simulation/rviz/: display.rviz
fwis_simulation/scripts/: aruco_aligner.py  cmd_vel_controller.py  generate_aruco_include.py  generate_aruco_models.py  kinematics_smc_controller.py  lyapunov_kinematics_controller.py  mpc_ufrws_controller.py  odom_publisher.py  scanner_motor_test.py
fwis_simulation/urdf/: fwis_effort.xacro.urdf  fwis_position_velocity.xacro.urdf
fwis_simulation/worlds/: demo_room.sdf  empty_world.sdf  sim_room.sdf
include/zebra-scanner/: Cslibcorescanner_xml.h
nav2_simulation/: CMakeLists.txt  global_planner_plugin.xml  lyapunov_kinematics_controller.xml  package.xml
nav2_simulation/config/: my_nav2_replanning_and_recovery.xml
nav2_simulation/include/nav2_simulation/: lyapunov_kinematics_controller.hpp  mpc_ufrws_controller.hpp  straight_line_planner.hpp
nav2_simulation/launch/: navigation2.launch.py
nav2_simulation/map/: demo_room.pgm  demo_room.yaml  sim_room.pgm  sim_room.yaml  test_room.pgm  test_room.yaml
nav2_simulation/param/: params_nav2.yaml
nav2_simulation/rviz/: rviz_nav2.rviz
nav2_simulation/scripts/: goal_checker_switcher.py  lyapunov_kinematics.py  waypoint_manager.py  waypoints_creator.py
nav2_simulation/src/: lyapunov_kinematics_controller.cpp  mpc_ufrws_controller.cpp  straight_line_planner.cpp
scanner_interfaces/: CMakeLists.txt  package.xml
video_test/: CMakeLists.txt
video_test/data/: camera_calibration.xml
video_test/src/: camera_calibration.cpp  main_aruco.cpp  main_video.cpp
(+3 files in other folders)
