<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_simulation</name>
  <version>0.0.0</version>
  <description>nav2 launch scripts for simulation</description>
  <maintainer email="cdioe88@hanyang.ac.kr">kkom</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_lifecycle</depend>  
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav2_util</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_common</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_core</depend>
  <depend>pluginlib</depend>
  <depend>libnlopt-dev</depend>

  <exec_depend>nav2_bringup</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/mpc_ufrws_controller.xml" />
  </export>
</package>